--- a/_config.yml
+++ b/_config.yml
@@ -56,7 +56,7 @@ author:
   keybase          : # Username
   instagram        : # Username
   lastfm           : # Username
-  linkedin         : https://www.linkedin.com/in/junoh-heo-894569319/
+  linkedin         : junoh-heo-894569319
   mastodon         : # URL
   medium           : # URL
   pinterest        : # Username
